--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@
   --textFontColour: #151515;
   --headerHeight: 100px;
   --headerColour: #D7D9CE;
+  --formBackground: var(--headerBackground);
+  --formFontColour: #D7D9CE;
 }
 
 html {
@@ -48,6 +50,14 @@ body {
   margin-top: 20px;
 }
 
+#popup-form {
+  position: absolute;
+  top: 35vh;
+  left: 25vw;
+  width: 45vw;
+  
+}
+
 .center {
   margin-left: 45vw;
   margin-right: 45vw;
@@ -63,6 +73,7 @@ body {
   visibility: hidden;
 }
 
+/************* Buttons ********************/
 /* Credits for plus button icon: https://codepen.io/LukeRFP/pen/XMbeRL by Luc Millet */
 .button_plus {
   position: absolute;
@@ -109,6 +120,116 @@ body {
   transition: 0.2s;
 }
 
+/* Credits for Add button: https://getcssscan.com/css-buttons-examples */
+.button-30 {
+  align-items: center;
+  appearance: none;
+  background-color: #D7D9CE;
+  border-radius: 100px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  width: 20%;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-30:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-30:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+.form-heading button {
+  position: absolute;
+  top: 3vh;
+  left: 35vw;
+}
+
+#add-task {
+  background-color: #D6D6E7;
+}
+
+/***************** Popup Form *******************/
+#popup-form {
+  position: fixed;
+  top: 5vw; left: 35vw;
+  z-index: 110;
+  height: auto;
+  /*transform: scale(0); /* Scale down the pop-up form */
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+}
+
+#supervisor, #club-member{
+  width: 50%;
+  position:relative;
+  left: 10%;
+}
+
+#priority-choices {
+  display: flex;
+  flex-direction: row;
+}
+
+.priority {
+  flex-grow: 1;
+}
+
+.input-form {
+  background-color: #A41623;
+  color: var(--formFontColour);
+  font-size: 18px;
+  border-radius: 25px;
+  padding: 10px;
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#popup-form.show {
+  transform: scale(1); 
+  transition: transform 0.5s; 
+}
+
+
+#popup-form.hide {
+  transform: scale(0);
+  transition: transform 0.5s;
+}
+
+
 /* Responsive Media */
 @media screen and (max-width: 870px) {
   .default-heading {
@@ -119,5 +240,29 @@ body {
   .alternate-heading {
     display: block;
     visibility: visible;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  #popup-form{
+    top: 20vh;
+    left: 10vw;
+    width: 80vw;
+  }
+}
+
+@media screen and (min-width: 491px) and (max-width: 667px) {
+  #popup-form {
+    top: 20vh;
+    left: 22vw;
+    width: 55vw;
+  }
+}
+
+@media screen and (min-width: 668px) and (max-width: 980px) {
+  #popup-form {
+    top: 20vh;
+    left: 30vw;
+    width: 40vw;
   }
 }
