--- a/styles.css
+++ b/styles.css
@@ -255,8 +255,19 @@ body {
 .current-priority {
   border-radius: 100px;
   width: 5vw;
-  background-color: red;
   text-align: center;
+}
+
+.current-priority.low {
+  background-color: yellow;
+}
+
+.current-priority.medium {
+  background-color: orange;
+}
+
+.current-priority.high {
+  background-color: red;
 }
 
 .title {
